Boxing - 2nd commit(fix 1 test).